--- a/covid_19_analysis.ipynb
+++ b/covid_19_analysis.ipynb
@@ -30,6 +30,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8aa3a1aa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "66263c57",
    "metadata": {},
@@ -43,7 +51,8 @@
     "    * [DATA WRANGLING](#data_wrangling)\n",
     "    * [EXPLORATORY  DATA  ANALYSIS](#exploratory_data_analysis)\n",
     "* [CONCLUSION](#conclusion)\n",
-    "* [REFERENCES](#references)"
+    "* [REFERENCES](#references)\n",
+    "* [APPENDIX](#appendix)"
    ]
   },
   {
@@ -125,7 +134,7 @@
    "source": [
     "**The required libraries were installed.**\n",
     "\n",
-    "The command to install packages/libraries are: **!pip install {library}** \n",
+    "The command to install packages/libraries are: **!pip install [library]** \n",
     "\n",
     "The following libraries were installed: NumPy, Pandas, Matplotlib and Seaborn."
    ]
@@ -144,28 +153,28 @@
      "text": [
       "Requirement already satisfied: numpy in c:\\users\\dehos\\anaconda3\\lib\\site-packages (1.20.3)\n",
       "Requirement already satisfied: pandas in c:\\users\\dehos\\anaconda3\\lib\\site-packages (1.1.5)\n",
-      "Requirement already satisfied: python-dateutil>=2.7.3 in c:\\users\\dehos\\anaconda3\\lib\\site-packages (from pandas) (2.8.2)\n",
       "Requirement already satisfied: numpy>=1.15.4 in c:\\users\\dehos\\anaconda3\\lib\\site-packages (from pandas) (1.20.3)\n",
       "Requirement already satisfied: pytz>=2017.2 in c:\\users\\dehos\\anaconda3\\lib\\site-packages (from pandas) (2021.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.7.3 in c:\\users\\dehos\\anaconda3\\lib\\site-packages (from pandas) (2.8.2)\n",
       "Requirement already satisfied: six>=1.5 in c:\\users\\dehos\\anaconda3\\lib\\site-packages (from python-dateutil>=2.7.3->pandas) (1.16.0)\n",
       "Requirement already satisfied: matplotlib in c:\\users\\dehos\\anaconda3\\lib\\site-packages (3.4.3)\n",
-      "Requirement already satisfied: numpy>=1.16 in c:\\users\\dehos\\anaconda3\\lib\\site-packages (from matplotlib) (1.20.3)\n",
       "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\dehos\\anaconda3\\lib\\site-packages (from matplotlib) (2.8.2)\n",
-      "Requirement already satisfied: pyparsing>=2.2.1 in c:\\users\\dehos\\anaconda3\\lib\\site-packages (from matplotlib) (3.0.4)\n",
       "Requirement already satisfied: cycler>=0.10 in c:\\users\\dehos\\anaconda3\\lib\\site-packages (from matplotlib) (0.10.0)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in c:\\users\\dehos\\anaconda3\\lib\\site-packages (from matplotlib) (8.4.0)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in c:\\users\\dehos\\anaconda3\\lib\\site-packages (from matplotlib) (3.0.4)\n",
       "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\dehos\\anaconda3\\lib\\site-packages (from matplotlib) (1.3.1)\n",
+      "Requirement already satisfied: numpy>=1.16 in c:\\users\\dehos\\anaconda3\\lib\\site-packages (from matplotlib) (1.20.3)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in c:\\users\\dehos\\anaconda3\\lib\\site-packages (from matplotlib) (8.4.0)\n",
       "Requirement already satisfied: six in c:\\users\\dehos\\anaconda3\\lib\\site-packages (from cycler>=0.10->matplotlib) (1.16.0)\n",
       "Requirement already satisfied: seaborn in c:\\users\\dehos\\anaconda3\\lib\\site-packages (0.11.2)\n",
       "Requirement already satisfied: pandas>=0.23 in c:\\users\\dehos\\anaconda3\\lib\\site-packages (from seaborn) (1.1.5)\n",
-      "Requirement already satisfied: matplotlib>=2.2 in c:\\users\\dehos\\anaconda3\\lib\\site-packages (from seaborn) (3.4.3)\n",
       "Requirement already satisfied: numpy>=1.15 in c:\\users\\dehos\\anaconda3\\lib\\site-packages (from seaborn) (1.20.3)\n",
       "Requirement already satisfied: scipy>=1.0 in c:\\users\\dehos\\anaconda3\\lib\\site-packages (from seaborn) (1.7.1)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\dehos\\anaconda3\\lib\\site-packages (from matplotlib>=2.2->seaborn) (1.3.1)\n",
+      "Requirement already satisfied: matplotlib>=2.2 in c:\\users\\dehos\\anaconda3\\lib\\site-packages (from seaborn) (3.4.3)\n",
       "Requirement already satisfied: cycler>=0.10 in c:\\users\\dehos\\anaconda3\\lib\\site-packages (from matplotlib>=2.2->seaborn) (0.10.0)\n",
-      "Requirement already satisfied: pyparsing>=2.2.1 in c:\\users\\dehos\\anaconda3\\lib\\site-packages (from matplotlib>=2.2->seaborn) (3.0.4)\n",
       "Requirement already satisfied: pillow>=6.2.0 in c:\\users\\dehos\\anaconda3\\lib\\site-packages (from matplotlib>=2.2->seaborn) (8.4.0)\n",
       "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\dehos\\anaconda3\\lib\\site-packages (from matplotlib>=2.2->seaborn) (2.8.2)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\dehos\\anaconda3\\lib\\site-packages (from matplotlib>=2.2->seaborn) (1.3.1)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in c:\\users\\dehos\\anaconda3\\lib\\site-packages (from matplotlib>=2.2->seaborn) (3.0.4)\n",
       "Requirement already satisfied: six in c:\\users\\dehos\\anaconda3\\lib\\site-packages (from cycler>=0.10->matplotlib>=2.2->seaborn) (1.16.0)\n",
       "Requirement already satisfied: pytz>=2017.2 in c:\\users\\dehos\\anaconda3\\lib\\site-packages (from pandas>=0.23->seaborn) (2021.3)\n"
      ]
@@ -217,19 +226,31 @@
    "id": "338085fa",
    "metadata": {},
    "source": [
-    "The dataset was downloaded from [here](https://www.kaggle.com/georgesaavedra/covid19-dataset). It contains information about COVID-19 cases by country, ranging from 2020-02-24 to 2022-02-17.\n",
+    "The dataset was downloaded from [here](https://www.kaggle.com/georgesaavedra/covid19-dataset). It contains information about COVID-19 cases by country with dates ranging from 2020-02-24 to 2022-02-17.\n",
     "\n",
     "Since the dataset is a CSV (Comma Separated Value) file, it is loaded into a Pandas DataFrame using the read_csv() function."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "2db19af0",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'os' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_21156/564846313.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mfilename\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'data/covid_19_dataset.csv'\u001b[0m \u001b[1;31m# File Path.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mif\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexists\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;31m# Checks if the file exists.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mfilename\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mendswith\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'.csv'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;31m# Checks if the filename ends with '.csv'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# Loads the dataset into a Pandas DataFrame.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'os' is not defined"
+     ]
+    }
+   ],
    "source": [
     "filename = 'data/covid_19_dataset.csv' # File Path.\n",
     "\n",
@@ -238,9 +259,11 @@
     "        df = pd.read_csv(filename) # Loads the dataset into a Pandas DataFrame.\n",
     "    else:\n",
     "        print(f'{filename} is not a .csv file') # Displays a message that the file is not a '.csv' file\n",
+    "        print('Program terminated.\\n')\n",
     "        sys.exit() # Terminates the program.\n",
     "else:\n",
     "    print(f'{filename} does not exist.') # Displays a message that the file does not exist.\n",
+    "    print('Program terminated.\\n')\n",
     "    sys.exit() # Terminates the program."
    ]
   },
@@ -472,7 +495,7 @@
     }
    ],
    "source": [
-    "df.head() # Displays the first 5 rows of the dataframe."
+    "df.head() # Displays the first 5 rows of the DataFrame."
    ]
   },
   {
@@ -703,7 +726,7 @@
     }
    ],
    "source": [
-    "df.tail() # Displays the last 5 rows of the dataframe."
+    "df.tail() # Displays the last 5 rows of the DataFrame."
    ]
   },
   {
@@ -711,7 +734,7 @@
    "execution_count": 8,
    "id": "19c5090e",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -797,6 +820,45 @@
    ],
    "source": [
     " df.info() # Displays information about the columns in the DataFrame."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "b7247102",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iso_code                                        0\n",
+      "continent                                    9748\n",
+      "location                                        0\n",
+      "date                                            0\n",
+      "total_cases                                  2965\n",
+      "                                            ...  \n",
+      "human_development_index                     29408\n",
+      "excess_mortality_cumulative_absolute       157087\n",
+      "excess_mortality_cumulative                157087\n",
+      "excess_mortality                           157075\n",
+      "excess_mortality_cumulative_per_million    157087\n",
+      "Length: 67, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.isnull().sum() # Displays the number of empty values in each column."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6af7ef3",
+   "metadata": {},
+   "source": [
+    "There are 67 columns in the DataFrame. Most of the columns contain missing values."
    ]
   },
   {
@@ -1166,7 +1228,7 @@
    "id": "ede4aa1c",
    "metadata": {},
    "source": [
-    "Empty values were replaced with \"np.nan\" values, and duplicate rows were removed."
+    "Empty values in the DataFrame were replaced with \"np.nan\" values."
    ]
   },
   {
@@ -1176,8 +1238,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.replace(r'^\\s*$', np.nan, inplace=True) # Replaces any empty values with \"np.nan\" values.\n",
+    "df.replace(r'^\\s*$', np.nan, inplace=True) # Replaces any empty values with \"np.nan\" values."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c9a3e94",
+   "metadata": {},
+   "source": [
+    "Duplicate rows in the DataFrame were removed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "d81590e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df.drop_duplicates(inplace=True) # Removes any duplicate rows."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3365b86",
+   "metadata": {},
+   "source": [
+    "From the DataFrame, it was observed the the \"date\" column is of the \"object\" datatype. The \"date\" column was then converted to the \"<M8[ns]\" datatype. The \"<M8[ns]\" datatype is a specific representation of the \"datetime64[ns]\" datatype."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "833c6c98",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('<M8[ns]')"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['date'] = pd.to_datetime(df['date'], format='%Y-%m-%d')# Converts the datatype of the \"date\" column in the DataFrame to \"<M8[ns]\".\n",
+    "df['date'].dtype # Displays the datatype of the \"date\" column in the DataFrame."
    ]
   },
   {
@@ -1232,6 +1341,22 @@
     "\n",
     "[3] <a class=\"anchor\" id=\"3\"></a> https://www.ccjm.org/content/87/6/321"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02559b07",
+   "metadata": {},
+   "source": [
+    "## APPENDIX<a class=\"anchor\" id=\"appendix\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "488d0602",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
